--- a/index.html
+++ b/index.html
@@ -10,35 +10,43 @@
     <div class="top8-friends">
       <div class="portrait">
         <p class="portrait-name">Alison</p>
-        <img src="img/img1.jpeg" alt="">
+        <img class="picture" src="img/img1.jpeg" alt="">
+        <img class="online-now" src="img/online.gif" alt="">
       </div>
       <div class="portrait">
         <p class="portrait-name">Jenna</p>
-        <img src="img/img1.jpeg" alt="">
+        <img class="picture" src="img/img1.jpeg" alt="">
+        <img class="online-now" src="img/online.gif" alt="">
       </div>
       <div class="portrait">
         <p class="portrait-name">Toby</p>
-        <img src="img/img1.jpeg" alt="">
+        <img class="picture" src="img/img1.jpeg" alt="">
+        <img class="online-now" src="img/online.gif" alt="">
       </div>
       <div class="portrait">
         <p class="portrait-name">Mona</p>
-        <img src="img/img1.jpeg" alt="">
+        <img class="picture" src="img/img1.jpeg" alt="">
+        <img class="online-now" src="img/online.gif" alt="">
       </div>
       <div class="portrait">
         <p class="portrait-name">Melissa</p>
-        <img src="img/img1.jpeg" alt="">
+        <img class="picture" src="img/img1.jpeg" alt="">
+        <img class="online-now" src="img/online.gif" alt="">
       </div>
       <div class="portrait">
         <p class="portrait-name">Aria</p>
-        <img src="img/img1.jpeg" alt="">
+        <img class="picture" src="img/img1.jpeg" alt="">
+        <img class="online-now" src="img/online.gif" alt="">
       </div>
       <div class="portrait">
         <p class="portrait-name">Emily</p>
-        <img src="img/img1.jpeg" alt="">
+        <img class="picture" src="img/img1.jpeg" alt="">
+        <img class="online-now" src="img/online.gif" alt="">
       </div>
       <div class="portrait">
         <p class="portrait-name">Hanna</p>
-        <img src="img/img1.jpeg" alt="">
+        <img class="picture" src="img/img1.jpeg" alt="">
+        <img class="online-now" src="img/online.gif" alt="">
       </div>
       <p class="red-text all-friends">View all of Spencer Hasting's friends.</p>
     </div>
