Add 1st version of top nav bar.

--- a/landing-page.html
+++ b/landing-page.html
@@ -6,13 +6,14 @@
   </head>
   <body>
     <div class="top-nav">
-      <button type="button" name="button">SIGN UP WITH EMAIL</button>
-      <button type="button" name="button">SIGN IN</button>
+      <button id="email-button" type="button" name="button">SIGN UP WITH EMAIL</button>
+      <button id="signin-button" type="button" name="button">SIGN IN</button>
       <a href="#">Top 10 Ideas</a>
       <a href="#">Staff Picks</a>
       <a href="#">Blog</a>
       <a href="#">FAQ</a>
       <a href="#">About</a>
+      <img id="nav-icon" src="img/small-icon.png" alt="">
     </div>
   </body>
 </html>
