Add main page buttons / styles.

--- a/landing-page.html
+++ b/landing-page.html
@@ -15,5 +15,14 @@
       <a href="#">About</a>
       <img id="nav-icon" src="img/small-icon.png" alt="">
     </div>
+    <img id="nav-icon-big" src="img/small-icon.png" alt="">
+    <div class="slogan">
+        <p>A site to turn the power on for your ideas.</p>
+    </div>
+    <div class="main">
+      <button id="story-button" class="main-buttons" type="button" name="button">SEE TOP STORIES</button>
+      <button id="facebook-button" class="main-buttons" type="button" name="button"> <img id="facebook-icon" src="img/facebook.png" alt=""> SIGN IN WITH FACEBOOK</button>
+    </div>
+
   </body>
 </html>
