Adjust nav bar, slogan, and button styles.

--- a/landing-page.html
+++ b/landing-page.html
@@ -6,8 +6,8 @@
   </head>
   <body>
     <div class="top-nav">
-      <button id="email-button" type="button" name="button">SIGN UP WITH EMAIL</button>
-      <button id="signin-button" type="button" name="button">SIGN IN</button>
+      <button id="email-button" type="button" name="button"><strong>SIGN UP WITH EMAIL</strong></button>
+      <button id="signin-button" type="button" name="button"><strong>SIGN IN</strong></button>
       <a href="#">Top 10 Ideas</a>
       <a href="#">Staff Picks</a>
       <a href="#">Blog</a>
@@ -20,7 +20,7 @@
         <p>A site to turn the power on for your ideas.</p>
     </div>
     <div class="main">
-      <button id="story-button" class="main-buttons" type="button" name="button">SEE TOP STORIES</button>
+      <button id="story-button" class="main-buttons" type="button" name="button"> <img id="fire-icon" src="img/fire.png" alt="">SEE TOP STORIES</button>
       <button id="facebook-button" class="main-buttons" type="button" name="button"> <img id="facebook-icon" src="img/facebook.png" alt=""> SIGN IN WITH FACEBOOK</button>
     </div>
 
