Update styles, add Google font.

--- a/landing-page.html
+++ b/landing-page.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
     <link href="css/styles2.css" rel="stylesheet" type="text/css">
-    <title></title>
+    <title>Writing on the Wall</title>
   </head>
   <body>
     <div class="top-nav">
@@ -15,6 +16,7 @@
       <a href="#">About</a>
       <img id="nav-icon" src="img/small-icon.png" alt="">
     </div>
+    <h1>Writing on the Wall</h1>
     <img id="nav-icon-big" src="img/small-icon.png" alt="">
     <div class="slogan">
         <p>A site to turn the power on for your ideas.</p>
